--- a/playbooks/create-directory-2.yaml
+++ b/playbooks/create-directory-2.yaml
@@ -53,3 +53,12 @@
     - name: Show the attribute values
       debug:
         var: xmlresp
+
+    - copy:
+        dest: $HOME/app/conf/configFiles.txt
+        content: | "{{item.PartNumber}}"
+        loop: {{xmlresp.matches}}
+
+
+
+
