--- a/playbooks/create-directory-2.yaml
+++ b/playbooks/create-directory-2.yaml
@@ -50,6 +50,9 @@
         attribute: PartNumber
       register: xmlresp
 
+    - debug:
+        var : xmlresp
+        
     - name: Show the attribute values
       debug:
         var: "{{xmlresp.matches}}"
