--- a/playbooks/create-directory-2.yaml
+++ b/playbooks/create-directory-2.yaml
@@ -53,17 +53,11 @@
     - debug:
         var : xmlresp
 
-    - name: Show the attribute values
-      debug:
-        var: "{{xmlresp.matches.Item}}"
-      register: matchedValues
-
-    - debug:
-        var: matchedValues
+    
 
     - copy:
         dest: $HOME/app/conf/configFiles.txt
-        content: "| {{item.PartNumber}}"
+        content: "| {{item.Item.PartNumber}}"
         loop: "{{xmlresp.matches}}"
 
 
