--- a/playbooks/create-directory-2.yaml
+++ b/playbooks/create-directory-2.yaml
@@ -53,12 +53,12 @@
     - debug:
         var : xmlresp
 
-    
+
 
     - copy:
         dest: $HOME/app/conf/configFiles.txt
         content: "| {{item.Item.PartNumber}}"
-        loop: "{{xmlresp.matches}}"
+        with_subelements: "{{xmlresp.matches}}"
 
 
 
