--- a/playbooks/create-directory-2.yaml
+++ b/playbooks/create-directory-2.yaml
@@ -53,6 +53,10 @@
     - debug:
         var : xmlresp
 
+    - debug:
+        var: {{item}}
+      with_subelements: "{{xmlresp.matches}}"
+
 
 
     - copy:
