--- a/playbooks/create-directory-2.yaml
+++ b/playbooks/create-directory-2.yaml
@@ -54,7 +54,7 @@
         var : xmlresp
 
     - debug:
-        var: {{item}}
+        var: "{{item}}"
       with_subelements: "{{xmlresp.matches}}"
 
 
