--- a/playbooks/create-directory-2.yaml
+++ b/playbooks/create-directory-2.yaml
@@ -55,7 +55,7 @@
 
     - debug:
         var: "{{item}}"
-      with_subelements: "{{xmlresp.matches}}"
+      with_items: "{{xmlresp.matches}}"
 
 
 
