--- a/playbooks/create-directory-2.yaml
+++ b/playbooks/create-directory-2.yaml
@@ -57,10 +57,11 @@
         var: "{{item}}"
       with_items: "{{xmlresp.matches}}"
 
+
     - name: Record Files to look up for the tokens
         debug:
-          var: "xmlresp.matches[{{ item }}].Item.PartNumber"
-        with_sequence: start=0 end="{{xmlresp.matches | length -1}}"
+          var: xmlresp.matches[{{ item }}].Item.PartNumber
+        with_sequence: start=0 end={{xmlresp.matches | length -1}}
 
     - copy:
         dest: $HOME/app/conf/configFiles.txt
