--- a/playbooks/create-directory-2.yaml
+++ b/playbooks/create-directory-2.yaml
@@ -71,10 +71,9 @@
     - name: Copy the file
       copy:
         dest: $HOME/app/conf/configFiles.txt
-        content: "{{part.Item.PartNumber}}"
-        loop: "{{fileNameList}}"
-        loop_control:
-          loop_var: part
+        content: "xmlresp.matches[{{ item }}].Item.PartNumber"
+        with_sequence: start=0 end={{xmlresp.matches | length -1}}
+
 
 
 
