--- a/playbooks/create-directory-2.yaml
+++ b/playbooks/create-directory-2.yaml
@@ -75,7 +75,9 @@
       loop: "{{xmlresp.matches}}"
       #with_sequence: start=0 end={{xmlresp.matches | length -1}}
 
-
+    - name: Create a file which contain list of all the parsed files
+      lineinfile: path=$HOME/app/conf/configFiles.txt line={{item.Item.PartNumber}} create=yes state=present
+      loop: "{{xmlresp.matches}}"
 
 
 
