--- a/playbooks/create-directory-2.yaml
+++ b/playbooks/create-directory-2.yaml
@@ -76,6 +76,7 @@
       #with_sequence: start=0 end={{xmlresp.matches | length -1}}
 
     - name: Create a file which contain list of all the parsed files
+      file: path=/home/LDC/ansible-inventory-check/conf/input.txt state=touch
       lineinfile: path=/home/LDC/ansible-inventory-check/conf/input.txt line={{item.Item.PartNumber}} create=yes state=present
       loop: "{{xmlresp.matches}}"
 
