--- a/playbooks/build-conf.yaml
+++ b/playbooks/build-conf.yaml
@@ -21,7 +21,7 @@
 
     - name: Loop through the tasks
       include_tasks: read-replace-app-token.yaml
-      with_items: "{{ lookup('file', '/home/LDC/ansible-inventory-check/conf/input.txt').splitlines() }}"
+      with_items: "{{ lookup('file', '/home/LDC/conf/input.txt').splitlines() }}"
         #- {file: app-conf1, ext: xml}
         #- {file: app-conf2, ext: xml}
         #- {file: app-conf3, ext: xml}
