--- a/playbooks/create-directory-2.yaml
+++ b/playbooks/create-directory-2.yaml
@@ -75,13 +75,13 @@
       loop: "{{xmlresp.matches}}"
       #with_sequence: start=0 end={{xmlresp.matches | length -1}}
 
-    - name: Create a file which contain list of all the parsed files
-      file:
-        path: /home/LDC/app/conf/input.txt
-        state: touch
+    #- name: Create a file which contain list of all the parsed files
+    #  file:
+    #    path: /home/LDC/app/conf/input.txt
+    #    state: touch
 
     - name: Write down the list of files to be read for tokens
-      lineinfile: path=/home/LDC/app/conf/input.txt line={{item.Item.PartNumber}} create=yes state=present
+      lineinfile: path=/home/LDC/app/conf/input.txt line={{item.Item.PartNumber}} create=yes state=present create=yes
       loop: "{{xmlresp.matches}}"
 
 
