--- a/playbooks/ceDD.yaml
+++ b/playbooks/ceDD.yaml
@@ -62,7 +62,10 @@
     #  lineinfile: path=/home/LDC/app/conf/input.txt line={{item.Item.PartNumber}} create=yes state=present create=yes
     #  loop: "{{xmlresp.matches}}"
 
+    - name: create a file to store the list of configuration files
+      shell: cat > /home/LDC/app/conf/input.txt
+
     - name: Write down the list of files to be read for tokens
-      shell: cat {{item.Item.PartNumber}} > /home/LDC/app/conf/input.txt
+      shell: echo '{{item.Item.PartNumber}}' >> /home/LDC/app/conf/input.txt
       loop: "{{xmlresp.matches}}"
 
