--- a/playbooks/ceDD.yaml
+++ b/playbooks/ceDD.yaml
@@ -18,6 +18,11 @@
         src:  purchaseOrder.xml
         dest: $HOME/app/conf/purchaseOrder.xml
 
+    - name: Clear the input.txt
+      file:
+        state: absent
+        path: /home/LDC/app/conf/config.txt
+          
     - name: Create a file which contain list of all the parsed files
       file:
         path: /home/LDC/app/conf/config.txt
@@ -57,6 +62,7 @@
         #content: "Jai Ganesh Ji Maharaj Ki Jai"
     #    content: "{{item.Item.PartNumber}}"
     #  loop: "{{xmlresp.matches}}"
+
 
 
 
