--- a/playbooks/read-replace-app-token.yaml
+++ b/playbooks/read-replace-app-token.yaml
@@ -38,10 +38,10 @@
     #  debug:
     #    var: tokens
 
-    #- debug:
-    #    msg="{{ lookup('ini', '{{item}} type=properties file=/home/LDC/ansible-inventory-check/conf/token.properties') }}"
-    #  loop: "{{tokens}}"
-    #  register: myresult
+    - debug:
+        msg="{{ lookup('ini', '{{item}} type=properties file=/home/LDC/ansible-inventory-check/conf/token.properties') }}"
+      loop: "{{tokens}}"
+      register: myresult
 
     #- debug:
     #    var : myresult
@@ -54,7 +54,7 @@
         path: /home/LDC/app/conf/{{file}}
         regexp: '@{{token}}@'
         #replace: 'GaneshJi'
-        replace: "{{ lookup('ini', '@{{token}}@ type=properties file=/home/LDC/ansible-inventory-check/conf/token.properties') }}"
+        replace: "{{ lookup('ini', '{{token}} type=properties file=/home/LDC/ansible-inventory-check/conf/token.properties') }}"
       with_items: "{{tokens}}"
       loop_control:
         loop_var: token
