--- a/playbooks/read-replace-app-token.yaml
+++ b/playbooks/read-replace-app-token.yaml
@@ -55,7 +55,7 @@
         regexp: '@{{token}}@'
         #replace: 'GaneshJi'
         replace: "{{ lookup('ini', '{{token}} type=properties file=/home/LDC/ansible-inventory-check/conf/token.properties') }}"
-        when: "{{ lookup('ini', '{{token}} type=properties file=/home/LDC/ansible-inventory-check/conf/token.properties') != '' }} "
+        when: "{{ lookup('ini', '{{token}} type=properties file=/home/LDC/ansible-inventory-check/conf/token.properties') != "" }} "
       with_items: "{{tokens}}"
       loop_control:
         loop_var: token
