--- a/playbooks/read-replace-app-token.yaml
+++ b/playbooks/read-replace-app-token.yaml
@@ -54,8 +54,8 @@
         path: /home/LDC/app/conf/{{file}}
         regexp: '@{{token}}@'
         #replace: 'GaneshJi'
-        replace: "{{ lookup('ini', '{{token}} type=properties file=/home/LDC/ansible-inventory-check/conf/token.properties') }}"
-        when: "{{ lookup('ini', '{{token}} type=properties file=/home/LDC/ansible-inventory-check/conf/token.properties') != "" }} "
+        replace: "{{ lookup('ini', '{{token}} type=properties file=/home/LDC/ansible-inventory-check/conf/token.properties'), default=@{{token}}@ }}"
+        #when: "{{ lookup('ini', '{{token}} type=properties file=/home/LDC/ansible-inventory-check/conf/token.properties') != "" }} "
       with_items: "{{tokens}}"
       loop_control:
         loop_var: token
