--- a/playbooks/read-replace-app-token.yaml
+++ b/playbooks/read-replace-app-token.yaml
@@ -38,10 +38,10 @@
     #  debug:
     #    var: tokens
 
-    - debug:
-        var: msg="{{ lookup('ini', '{{item}} type=properties file=/home/LDC/ansible-inventory-check/conf/token.properties default=NONE') }}"
-      loop: "{{tokens}}"
-      register: myresult
+    #- debug:
+    #    var: "{{ lookup('ini', '{{item}} type=properties file=/home/LDC/ansible-inventory-check/conf/token.properties default=NONE') }}"
+    #  loop: "{{tokens}}"
+
 
     #- debug:
     #    var : myresult
@@ -54,7 +54,7 @@
         path: /home/LDC/app/conf/{{file}}
         regexp: '@{{token}}@'
         #replace: 'GaneshJi'
-        replace: "{{ lookup('ini', '{{token}} type=properties file=/home/LDC/ansible-inventory-check/conf/token.properties default=@{{token}}@' ) }}"
+        replace: "{{ lookup('ini', '{{token}} type=properties file=/home/LDC/ansible-inventory-check/conf/token.properties' ) | default(omit) }}"
         #when: "{{ lookup('ini', '{{token}} type=properties file=/home/LDC/ansible-inventory-check/conf/token.properties') != "" }} "
       with_items: "{{tokens}}"
       loop_control:
