--- a/playbooks/ceDD.yaml
+++ b/playbooks/ceDD.yaml
@@ -9,6 +9,10 @@
 
   tasks:
 
+    - name: Install Required Tools
+      apt: name={{item}} state=present update_cache=yes
+      with_items:
+        - python-lxml
 
     - name: Ensure a configuration directory exists in $HOME/app
       file:
