--- a/playbooks/ceDD.yaml
+++ b/playbooks/ceDD.yaml
@@ -111,6 +111,7 @@
       file:
         src: /home/LDC/app/conf
         dest: /home/LDC/current
+        state: link
 
     - name: Ansible date timestamp example
       debug:
