--- a/playbooks/ceDD.yaml
+++ b/playbooks/ceDD.yaml
@@ -115,7 +115,7 @@
 
     - name: create a symlink which points to the previous version
       file:
-        src: /home/LDC/app/conf
+        src: /home/LDC/app/source
         dest: /home/LDC/previous
         state: link
 
@@ -124,6 +124,12 @@
       register: symlink
 
     - debug: var=symlink
+
+    - name: find out the value of symlink
+      stat: path=/home/LDC/previous
+      register: symlink2
+
+    - debug: var=symlink2
 
     - name: Ansible date timestamp example
       debug:
