--- a/playbooks/ceDD.yaml
+++ b/playbooks/ceDD.yaml
@@ -139,8 +139,8 @@
 
     - name: create new symlink which points somewhere else
       file:
-        src: /home/LDC/previous
-        dest: "{{symlink2.stat.lnk_source}}"
+        src: "{{symlink2.stat.lnk_source}}"
+        dest: /home/LDC/previous
         state: link
 
     - name: Ansible date timestamp example
