--- a/playbooks/um/create-user.yaml
+++ b/playbooks/um/create-user.yaml
@@ -14,7 +14,7 @@
 
     - name: Printing the properties
       debug:
-        var: zone
+        var: webserver-host
 
     - name: Generate a password
       pause: prompt="Enter a password"
