--- a/playbooks/um/create-user.yaml
+++ b/playbooks/um/create-user.yaml
@@ -18,8 +18,8 @@
 
     - name: Printing the properties
       debug:
-        var: zone
-        
+        var: webserver-host
+
     - name: Generate a password
       pause: prompt="Enter a password"
       register: password
