--- a/playbooks/um/create-user.yaml
+++ b/playbooks/um/create-user.yaml
@@ -10,15 +10,15 @@
 
     - name: Priting the value
       debug:
-        msg="{{zone}}"
+        msg="{{ce_app_user}}"
 
     - name: Printing the properties
       debug:
-        var: zone
+        var: ce_app_user
 
-    - name: Printing the properties
-      debug:
-        var: webserver-host
+    #- name: Printing the properties
+      #debug:
+        #var: webserver-host
 
     - name: Generate a password
       pause: prompt="Enter a password"
