--- a/playbooks/um/create-user.yaml
+++ b/playbooks/um/create-user.yaml
@@ -17,7 +17,7 @@
 
     - name: printing host properties
       debug:
-        var: hostvars[webserverhost]
+        var: hostvars['webserverhost']
 
     - name: Priting the application username
       debug:
