--- a/playbooks/um/create-user.yaml
+++ b/playbooks/um/create-user.yaml
@@ -17,7 +17,7 @@
 
     - name: printing host properties
       debug:
-        msg="{{hostvars['webserverhost']}}"
+        var: host_vars['webserverhost']
 
     - name: Priting the application username
       debug:
