--- a/playbooks/um/create-user.yaml
+++ b/playbooks/um/create-user.yaml
@@ -17,7 +17,7 @@
 
     - name: printing host properties
       debug:
-        var: host_vars['webserverhost']
+        msg="{{host_vars['webserverhost']}}"
 
     - name: Priting the application username
       debug:
