--- a/playbooks/um/create-user.yaml
+++ b/playbooks/um/create-user.yaml
@@ -17,7 +17,7 @@
 
 
     - name : Store the password in a variable
-      debug: var="{{password | password_hash('sha512')}}"
+      debug: var= password | password_hash('sha512')
       register: upassword
 
 
