--- a/playbooks/um/create-user.yaml
+++ b/playbooks/um/create-user.yaml
@@ -20,7 +20,7 @@
       command: echo "{{password | password_hash('sha512')}}"
       register: upassword
 
-      debug: var=upassword
+    - debug: var=upassword
 
 
     - name: Priting the application username
