--- a/playbooks/um/create-user.yaml
+++ b/playbooks/um/create-user.yaml
@@ -25,7 +25,7 @@
 
     - name: Priting the application username
       debug:
-        msg="{{ce_app_user}}"
+        msg="{{ce_app_user}}/password={{upassword.stdout}}"
 
     #- name: Generate a password
     #  pause: prompt="Enter a password"
