--- a/bmm/database.yaml
+++ b/bmm/database.yaml
@@ -3,7 +3,7 @@
   hosts: eastzone
   tasks:
 
-    - name: Install ngnix
+    - name: Install dependencies for the databases
       apt: name={{item}} state=present update_cache=yes
       become: true
       with_items:
