--- a/bmm/loadbalancer.yaml
+++ b/bmm/loadbalancer.yaml
@@ -3,7 +3,7 @@
   hosts: eastzone
   tasks:
 
-    - name: Install ngnix
+    - name: Install Dependencies for the loadbalancer
       apt: name={{item}} state=present update_cache=yes
       with_items:
-        - ngnix
+        - nginx
