--- a/bmm/webserver.yaml
+++ b/bmm/webserver.yaml
@@ -5,7 +5,7 @@
 
     - name: Install dependencies for the webservers
       apt: name={{item}} state=present update_cache=yes
-      become: true
+      #become: true
       with_items:
         - git
         #- apache
