--- a/bmm/loadbalancer.yaml
+++ b/bmm/loadbalancer.yaml
@@ -10,3 +10,19 @@
 
     - name: Ensure nginx is started
       service: name=nginx state=started enabled=yes
+
+    - name: Create the configuration file for the nginx
+      template: src=templates/nginx.conf.j2 dest=/etc/ngnix/sites-available/webapp mode=0644
+      notify: Restart nginx
+
+    - name: Disable default site of the nginx
+      file: path=/etc/ngnix/sites-enabled/default state=absent
+      notify: Restart nginx
+
+    - name: Activate the load balancing for the webapp
+      file: src=/etc/ngnix/site-available/webapp dest=/etc/ngnix/sites-enabled/webapp state=link
+      notify: Restart ngnix
+
+  handlers:
+     - name: Restart nginx
+       service: name=nginx state=restarted
