--- a/bmm/loadbalancer.yaml
+++ b/bmm/loadbalancer.yaml
@@ -9,11 +9,11 @@
         - nginx
 
     - name: Ensure nginx is started
-      service: name=nginx state=started enabled=yes
+      service: name=nginx state=restarted enabled=yes
 
-    - name: Create the configuration file for the nginx
-      template: src=templates/nginx.conf.j2 dest=/etc/nginx/sites-available/webapp mode=0644
-      notify: Restart nginx
+    #- name: Create the configuration file for the nginx
+    #  template: src=templates/nginx.conf.j2 dest=/etc/nginx/sites-available/webapp mode=0644
+    #  notify: Restart nginx
 
     #- name: Disable default site of the nginx
     #  file: path=/etc/nginx/sites-enabled/default state=absent
