--- a/bmm/loadbalancer.yaml
+++ b/bmm/loadbalancer.yaml
@@ -9,7 +9,7 @@
         - nginx
 
     - name: Ensure nginx is started
-      service: name=nginx state=restarted enabled=yes
+      service: name=nginx state=started enabled=yes
 
     #- name: Create the configuration file for the nginx
     #  template: src=templates/nginx.conf.j2 dest=/etc/nginx/sites-available/webapp mode=0644
