--- a/bmm/loadbalancer.yaml
+++ b/bmm/loadbalancer.yaml
@@ -15,13 +15,13 @@
       template: src=templates/nginx.conf.j2 dest=/etc/nginx/sites-available/webapp mode=0644
       notify: Restart nginx
 
-    #- name: Disable default site of the nginx
-    #  file: path=/etc/nginx/sites-enabled/default state=absent
-    #  notify: Restart nginx
+    - name: Disable default site of the nginx
+      file: path=/etc/nginx/sites-enabled/default state=absent
+      notify: Restart nginx
 
-    #- name: Activate the load balancing for the webapp
-    #  file: src=/etc/nginx/sites-available/webapp dest=/etc/nginx/sites-enabled/webapp state=link
-    #  notify: Restart nginx
+    - name: Activate the load balancing for the webapp
+      file: src=/etc/nginx/sites-available/webapp dest=/etc/nginx/sites-enabled/webapp state=link
+      notify: Restart nginx
 
   handlers:
      - name: Restart nginx
