--- a/bmm/roles/create-user/tasks/main.yml
+++ b/bmm/roles/create-user/tasks/main.yml
@@ -4,7 +4,7 @@
     register: username
 
   - name: Prompt for password
-    pause: prompt="Enter the password" echo="no"
+    pause: prompt="Enter the password" echo=false
     register: password
 
   - name: Prompt for role
